# nanoclaw

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  OUTBOUND-AUDIO-ANALYSIS.md  PORTS.md  SIPGATE-VOICE-REVIEW.md  docker-compose.hindsight.yml  docker-compose.proposed.yml  package-lock.json  package.json
.planning/: BACKLOG.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
data/: contracts.example.json  practice-profile.example.json
docs/: ANDY-ADMIN.md  PHONE-CALL-SKILL.md  runbook-phase-4-cron.md
drachtio-config/: Dockerfile  drachtio-minimal.conf.xml  drachtio.conf.xml
freeswitch-config/: Dockerfile  dialplan-public.xml  entrypoint.sh  external-override.xml  sipgate-gateway.xml  vars-override.xml
scripts/: analyze-andy-call.sh  audit-audio.sh  audit-audio.test.sh  claw  pricing-refresh.sh  pricing-refresh.test.sh  trace-sweep.sh
src/: config.ts  container-runner.test.ts  container-runner.ts  cost-ledger.test.ts  cost-ledger.ts  db.test.ts  db.ts  drift-monitor.test.ts  drift-monitor.ts  freeswitch-voice.ts  group-queue.ts  health-check.test.ts  health-check.ts  hindsight.ts  index.test.ts  index.ts  ipc-auth.test.ts  ipc.ts  mcp-server.test.ts  mcp-server.ts  mcp-stream-server.regression.test.ts  mcp-stream-server.test.ts  mcp-stream-server.ts  openai-webhook.ts  peer-allowlist.test.ts  peer-allowlist.ts  recon-3way.test.ts  recon-3way.ts  recon-invoice.ts  (+12 more)
voice-stack/vs-webhook-forwarder/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_synthetic.py
voice-stack/vs-webhook-forwarder/tests/: test_signature.py
(+475 files in other folders)
