[project]
name = "vs-webhook-forwarder"
version = "0.1.0"
description = "OpenAI webhook forwarder relay (Hetzner public ingress -> Lenovo1 voice-bridge over WG)"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-x -v"
pythonpath = ["."]
